; ModuleID = '/home/carl/AnghaBench/redis/src/extr_listpack.c_lpDecodeBacklen.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_listpack.c_lpDecodeBacklen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UINT64_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lpDecodeBacklen(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 0, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %33, %1
  %7 = load i8*, i8** %3, align 8
  %8 = getelementptr inbounds i8, i8* %7, i64 0
  %9 = load i8, i8* %8, align 1
  %10 = zext i8 %9 to i32
  %11 = and i32 %10, 127
  %12 = load i32, i32* %5, align 4
  %13 = shl i32 %11, %12
  %14 = load i32, i32* %4, align 4
  %15 = or i32 %14, %13
  store i32 %15, i32* %4, align 4
  %16 = load i8*, i8** %3, align 8
  %17 = getelementptr inbounds i8, i8* %16, i64 0
  %18 = load i8, i8* %17, align 1
  %19 = zext i8 %18 to i32
  %20 = and i32 %19, 128
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %6
  br label %34

23:                                               ; preds = %6
  %24 = load i32, i32* %5, align 4
  %25 = add nsw i32 %24, 7
  store i32 %25, i32* %5, align 4
  %26 = load i8*, i8** %3, align 8
  %27 = getelementptr inbounds i8, i8* %26, i32 -1
  store i8* %27, i8** %3, align 8
  %28 = load i32, i32* %5, align 4
  %29 = icmp sgt i32 %28, 28
  br i1 %29, label %30, label %32

30:                                               ; preds = %23
  %31 = load i32, i32* @UINT64_MAX, align 4
  store i32 %31, i32* %2, align 4
  br label %36

32:                                               ; preds = %23
  br label %33

33:                                               ; preds = %32
  br i1 true, label %6, label %34

34:                                               ; preds = %33, %22
  %35 = load i32, i32* %4, align 4
  store i32 %35, i32* %2, align 4
  br label %36

36:                                               ; preds = %34, %30
  %37 = load i32, i32* %2, align 4
  ret i32 %37
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
